--- a/add.html
+++ b/add.html
@@ -20,8 +20,8 @@
     <div class="container mt-5 py-5">
         <div class="p-4 rounded bg-body-secondary">
             <h1 class="display-5 fst-italic">Welcome to Sample Site</h1>
-            <p class="lead mt-5">変更テスト追加</p>
-            <p class="lead">追加</p>
+            <p class="lead mt-5">ここを変更する</p>
+            <p class="lead">ここを変更する</p>
             <p class="lead"><a href="about.html">さらに詳しく</a></p>        
         </div>
         <div class="row my-5">
